--- a/MixwellSoftware/WixwellWPF/MixwellWPF.csproj
+++ b/MixwellSoftware/WixwellWPF/MixwellWPF.csproj
@@ -62,6 +62,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="WPFQA.cs" />
     <Page Include="Views\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
