--- a/MixwellSoftware/MixwellMvc/MixwellMvc.csproj
+++ b/MixwellSoftware/MixwellMvc/MixwellMvc.csproj
@@ -164,15 +164,18 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\DependencyInjectionController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MixwellDataController.cs" />
     <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\AccountModels.cs" />
-    <Compile Include="Models\MixwellData.cs" />
+    <Compile Include="Controllers\Models\AccountModels.cs" />
+    <Compile Include="Controllers\Models\MixwellData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\DependencyInjectionService.cs" />
+    <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
@@ -247,6 +250,8 @@
     <Content Include="Scripts\knockout-2.1.0.debug.js" />
     <Content Include="Scripts\knockout-2.1.0.js" />
     <Content Include="Scripts\modernizr-2.5.3.js" />
+    <Content Include="Views\DependencyInjection\DependencyInjectionView.aspx" />
+    <Content Include="Views\DependencyInjection\Index.aspx" />
     <Content Include="Views\MixwellData\Details.aspx" />
     <Content Include="Views\MixwellData\Edit.aspx" />
     <Content Include="Views\MixwellData\Index.aspx" />
@@ -294,6 +299,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
