--- a/MixwellSoftware/MixwellConsole/MixwellConsole.csproj
+++ b/MixwellSoftware/MixwellConsole/MixwellConsole.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="MixwellClass.cs" />
     <Compile Include="MixwellCSharp.cs" />
+    <Compile Include="MixwellSample.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
