--- a/MixwellSoftware/MixwellWcf/bin/MixwellWcf.dll.config
+++ b/MixwellSoftware/MixwellWcf/bin/MixwellWcf.dll.config
@@ -17,14 +17,14 @@
   </system.web>
   <system.serviceModel>
     <services>
-      <service name= "MixwellWcf.MixwellWCFService">
+      <service name="MixwellWcf.MixwellWCFService">
         <endpoint address="" behaviorConfiguration="restbehavior" binding="webHttpBinding" contract="MixwellWcf.IMixwellWCFService"></endpoint>
       </service>
     </services>
     <behaviors>
       <endpointBehaviors>
         <behavior name="restbehavior">
-          <webHttp/>
+          <webHttp />
         </behavior>
       </endpointBehaviors>
       <serviceBehaviors>
@@ -51,9 +51,7 @@
       -->
     <directoryBrowse enabled="true" />
   </system.webServer>
-  <connectionStrings>
-    <add name="MixwellDatabaseEntities" connectionString="metadata=res://*/MixwellDataModel.csdl|res://*/MixwellDataModel.ssdl|res://*/MixwellDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=BOWEN-PC;initial catalog=MixwellDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <connectionStrings><add name="MixwellDatabaseEntities" connectionString="metadata=res://*/MixwellDataModel1.csdl|res://*/MixwellDataModel1.ssdl|res://*/MixwellDataModel1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=BOWEN-PC;initial catalog=MixwellDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="MixwellDBEntities" connectionString="metadata=res://*/MixwellDataModel.csdl|res://*/MixwellDataModel.ssdl|res://*/MixwellDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LENOVO-PC;initial catalog=MixwellDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="MixwellDBEntities" connectionString="metadata=res://*/MixwellDataModel.csdl|res://*/MixwellDataModel.ssdl|res://*/MixwellDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LENOVO-PC;initial catalog=MixwellDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
