--- a/MixwellSoftware/MixwellMvc/Web.config
+++ b/MixwellSoftware/MixwellMvc/Web.config
@@ -8,9 +8,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings>
-  
-  <add name="MixwellDBEntities" connectionString="metadata=res://*/Models.MixwellDataModel.csdl|res://*/Models.MixwellDataModel.ssdl|res://*/Models.MixwellDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LENOVO-PC;initial catalog=MixwellDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <connectionStrings><add name="MixwellDBEntities" connectionString="metadata=res://*/Models.MixwellDataModel.csdl|res://*/Models.MixwellDataModel.ssdl|res://*/Models.MixwellDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LENOVO-PC;initial catalog=MixwellDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="MixwellDBEntities1" connectionString="metadata=res://*/Models.DeptDataModel.csdl|res://*/Models.DeptDataModel.ssdl|res://*/Models.DeptDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LENOVO-PC;initial catalog=MixwellDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
