--- a/MixwellSoftware/MixwellMvc/MixwellMvc.csproj
+++ b/MixwellSoftware/MixwellMvc/MixwellMvc.csproj
@@ -332,6 +332,7 @@
     <Content Include="Views\Web.config" />
     <Content Include="Views\MixwellData\Index.cshtml" />
     <Content Include="Views\MixwellData\Details.cshtml" />
+    <Content Include="Views\MixwellData\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
